# StudingProjects

./: .gitignore  README.md
AVLTree/: AVLTree.pro.user.3.2-pre1  avltree.cpp  avltree.h  main.cpp  node.cpp  node.h
AbstractSyntaxTree/: README.txt  binaryoperation.cpp  binaryoperation.h  copysyntaxtree.cpp  copysyntaxtree.h  expression.h  foldconstants.cpp  foldconstants.h  functioncall.cpp  functioncall.h  main.cpp  number.cpp  number.h  scope.h  transformer.h  variable.cpp  variable.h
Abstract_syntax_tree/: Abstract_syntax_tree.pro  Abstract_syntax_tree.pro.user.3.2-pre1  binaryoperation.cpp  copysyntaxtree.h  functioncall.cpp  main.cpp
Any/: Any.pro  Any.pro.user.3.2-pre1  any.cpp  any.h  any.tpp  icloneable.h  main.cpp  valueholder.cpp  valueholder.h
Array/: Array.pro  Array.pro.user.3.2-pre1  README.txt  array.h  array.tpp  main.cpp
AvlTree/: AvlTree.pro  avltree.cpp  avltree.h  node.cpp  node.h
BinaryHeap/: BinaryHeap.pro  BinaryHeap.pro.user.3.2-pre1  binaryheap.cpp  binaryheap.h  main.cpp
Calculator/: Calculator.pro  README.txt  calculator.cpp  calculator.h  context.h  functor.h  main.cpp  sinfunctorone.h  sinfunctorthree.h  sinfunctortwo.h
CoffeShop/: CoffeShop.pro  README.txt  coffe.cpp  coffe.h  decoratorchocolate.cpp  decoratorchocolate.h  decoratormilk.cpp  decoratormilk.h  espresso.cpp  espresso.h  idecorator.cpp  idecorator.h  idrink.cpp  idrink.h  iproduct.cpp  iproduct.h  latte.cpp  latte.h  main.cpp
Complex/: Complex.pro  complex.cpp  complex.h  main.cpp
GoMoku/: main.cpp  (+5 more)
MatrixTask/: CMakeLists.txt  main.cpp  matrix.hpp  matrix.tpp
(+98 files in other folders)
